InstanceOf && Record